@@ -15,42 +15,38 @@ import org.opensearch.core.index.shard.ShardId;
 import org.opensearch.test.OpenSearchTestCase;
 
 import java.util.Collections;
+import java.util.Map;
 import java.util.Objects;
 
 import static org.hamcrest.core.IsEqual.equalTo;
 
-public class PublishMergedSegmentRequestTests extends OpenSearchTestCase {
+public class RemoteStorePublishMergedSegmentRequestTests extends OpenSearchTestCase {
 
     public void testPublishMergedSegmentRequest() {
-        MergedSegmentCheckpoint checkpoint = new MergedSegmentCheckpoint(
-            new ShardId(new Index("1", "1"), 0),
-            0,
-            0,
-            "",
-            Collections.emptyMap(),
-            "_0"
+        RemoteStoreMergedSegmentCheckpoint checkpoint = new RemoteStoreMergedSegmentCheckpoint(
+            new MergedSegmentCheckpoint(new ShardId(new Index("1", "1"), 0), 0, 0, "", Collections.emptyMap(), "_0"),
+            Map.of("_0", "_0__uuid")
         );
-        PublishMergedSegmentRequest request = new PublishMergedSegmentRequest(checkpoint);
+
+        RemoteStorePublishMergedSegmentRequest request = new RemoteStorePublishMergedSegmentRequest(checkpoint);
         assertNull(request.validate());
         assertEquals(checkpoint, request.getMergedSegment());
         assertEquals(Objects.hash(checkpoint), request.hashCode());
+        assertEquals(checkpoint.getLocalToRemoteSegmentFilenameMap(), Map.of());
+        assertEquals(checkpoint.getLocalToRemoteSegmentFilenameMap(), Map.of("_0", "_0__uuid"));
     }
 
     public void testSerialize() throws Exception {
-        MergedSegmentCheckpoint checkpoint = new MergedSegmentCheckpoint(
-            new ShardId(new Index("1", "1"), 0),
-            0,
-            0,
-            "",
-            Collections.emptyMap(),
-            "_0"
+        RemoteStoreMergedSegmentCheckpoint checkpoint = new RemoteStoreMergedSegmentCheckpoint(
+            new MergedSegmentCheckpoint(new ShardId(new Index("1", "1"), 0), 0, 0, "", Collections.emptyMap(), "_0"),
+            Map.of("_0", "_0__uuid")
         );
-        PublishMergedSegmentRequest originalRequest = new PublishMergedSegmentRequest(checkpoint);
-        PublishMergedSegmentRequest cloneRequest;
+        RemoteStorePublishMergedSegmentRequest originalRequest = new RemoteStorePublishMergedSegmentRequest(checkpoint);
+        RemoteStorePublishMergedSegmentRequest cloneRequest;
         try (BytesStreamOutput out = new BytesStreamOutput()) {
             originalRequest.writeTo(out);
             try (StreamInput in = out.bytes().streamInput()) {
-                cloneRequest = new PublishMergedSegmentRequest(in);
+                cloneRequest = new RemoteStorePublishMergedSegmentRequest(in);
             }
         }
         assertThat(cloneRequest, equalTo(originalRequest));
